# strided-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  THIRD-PARTY-LICENSES  coverage-thresholds.json  julia_readme_bench.jl
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
benches/: Manifest.toml  Project.toml  blas_bench.rs  julia_4000_transpose.jl  julia_benchtests.rs  julia_readme_compare.jl  julia_scaling_compare.jl  mdarray_compare.rs  parallel_bench.rs  readme_examples.rs  run_threaded.sh  rust_compare.rs  rust_readme_compare.rs  scaling_compare.rs  strided_bench.rs
benches/julia/: strided.jl
deprecated/benches/: julia_benchtests.rs  julia_permute_check.jl  mdarray_compare.rs  readme_examples.rs  strided_bench.rs  strided_julia_permute_1000.jl  strided_julia_readme_single_thread.jl
docs/: STRIDED_DESIGN.md  analysis-gemm-strategy.md  analysis-memory-allocation.md  analysis-permutation-kernels.md  analysis-threading-parallelism.md  eager-hptt-experiment.md  faer_design.md  flatten-hptt-experiment.md  future.md  hptt-openblas-vs-julia-benchmark.md  omeinsum-merge-analysis.md  performance-vs-omeinsum.md  permutation-optimization.md  report.md  report_all_features.md  report_blas.md  report_parallel.md  src-vs-dst-order-experiment.md  strided_jl_threading_bug.md  symmetrize.md
docs/plans/: 2026-02-07-blas-backend-design.md  2026-02-07-blas-backend-impl.md  2026-02-07-eval-node-lifetime-design.md  2026-02-07-opteinsum-perf-design.md  2026-02-07-opteinsum-perf-impl.md  2026-02-07-owned-inputs-design.md  2026-02-07-owned-inputs-impl.md  2026-02-07-strided-opteinsum-design.md  2026-02-07-strided-opteinsum-impl.md  2026-02-09-mdarray-opteinsum-design.md  2026-02-09-ndarray-opteinsum-design.md  2026-02-10-tenet-design.md  2026-02-10-unified-tensor-backend-design.md  2026-02-11-generative-einsum-outputs.md  2026-02-11-mixed-scalar-types-design.md  2026-02-11-trait-simd-dispatch.md  2026-02-11-tropical-newtype-design.md  2026-02-12-batch-last-canonical-order.md
mdarray-opteinsum/: Cargo.toml  README.md
mdarray-opteinsum/src/: convert.rs  lib.rs
ndarray-opteinsum/: Cargo.toml  README.md
ndarray-opteinsum/src/: convert.rs  lib.rs
src/: auxiliary.rs  blas.rs  block.rs  broadcast.rs  element_op.rs  fuse.rs  kernel.rs  lib.rs  linalg.rs  map.rs  map_view.rs  ops.rs  ops_view.rs  order.rs  pod_complex.rs  promote.rs  reduce.rs  reduce_view.rs  strided_view.rs  threading.rs  view.rs
strided/: Cargo.toml
strided-einsum2/: Cargo.toml  README.md  build.rs
strided-einsum2/benches/: Manifest.toml  Project.toml  batchmul.rs  diag.rs  dot.rs  hadamard.rs  indexsum.rs  julia_batchmul.jl  julia_diag.jl  julia_dot.jl  julia_hadamard.jl  julia_indexsum.jl  julia_manyinds.jl  julia_matmul.jl  julia_outer.jl  julia_perm.jl  julia_ptrace.jl  julia_star.jl  julia_starandcontract.jl  julia_tcontract.jl  julia_trace.jl  manyinds.rs  matmul.rs  outer.rs  perm.rs  ptrace.rs  run_all.sh  star.rs  starandcontract.rs  tcontract.rs  trace.rs
strided-einsum2/src/: backend.rs  bgemm.rs  bgemm_blas.rs  bgemm_faer.rs  bgemm_naive.rs  contiguous.rs  lib.rs  plan.rs  trace.rs  util.rs
strided-einsum2/tests/: blas_inject_fallback.rs
strided-kernel/: Cargo.toml  README.md
strided-kernel/benches/: julia_rank25_compare.jl  rank25_permute.rs  run_all.sh  run_scaling.sh  run_threaded.sh  rust_compare.rs  scaling_compare.rs  threaded_compare.rs
strided-kernel/src/: block.rs  fuse.rs  kernel.rs  lib.rs  map_view.rs  maybe_sync.rs  ops_view.rs  order.rs  reduce_view.rs  simd.rs  threading.rs
strided-kernel/tests/: correctness_view.rs
strided-opteinsum/: Cargo.toml  README.md
strided-opteinsum/benches/: batchmul.rs  diag.rs  dot.rs  hadamard.rs  indexsum.rs  manyinds.rs  matmul.rs  outer.rs  perm.rs  ptrace.rs  star.rs  starandcontract.rs  tcontract.rs  trace.rs
strided-opteinsum/src/: error.rs  expr.rs  lib.rs  operand.rs  parse.rs  single_tensor.rs  typed_tensor.rs
strided-opteinsum/tests/: integration.rs
strided-opteinsum/tests/support/: loop_einsum.rs
strided-perm/: Cargo.toml  README.md
strided-perm/benches/: permute.rs
strided-perm/src/: block.rs  copy.rs  fuse.rs  hptt.rs  kernel.rs  lib.rs  order.rs
strided-perm/src/hptt/: execute.rs  macro_kernel.rs  mod.rs  plan.rs
strided-perm/src/hptt/micro_kernel/: mod.rs  scalar.rs
strided-traits/: Cargo.toml
strided-traits/src/: element_op.rs  lib.rs  scalar.rs
strided-view/: Cargo.toml  README.md
strided-view/src/: element_op.rs  lib.rs  view.rs
strided/benches/: julia_compare.jl  julia_threaded_compare.jl  rust_compare.rs  scaling_compare.rs  threaded_compare.rs
strided/src/: block.rs  fuse.rs  kernel.rs  lib.rs  map_view.rs  ops_view.rs  order.rs  reduce_view.rs
strided/tests/: correctness_view.rs
stridedview/: Cargo.toml
stridedview/src/: lib.rs  strided_view.rs
tests/: correctness.rs  correctness_view.rs
