[package]
name = "mdarray-strided"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
mdarray = "0.7.2"
num-traits = "0.2"
num-complex = "0.4"
thiserror = "1.0"
rayon = { version = "1.10", optional = true }
cblas = { version = "0.4", optional = true }

[features]
default = []
parallel = ["rayon"]
blas = ["cblas"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"

[lib]
bench = false

[[bench]]
name = "strided_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false
required-features = ["parallel"]

[[bench]]
name = "blas_bench"
harness = false
required-features = ["blas"]
