[package]
name = "strided-einsum2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Satoshi Terasaki", "Hiroshi Shinaoka"]
repository = "https://github.com/tensor4all/strided-rs"
description = "Binary einsum (pairwise tensor contraction) on strided views."
publish = false

[dependencies]
strided-view = { path = "../strided-view" }
strided-kernel = { path = "../strided-kernel" }
num-traits = "0.2"
thiserror = "1.0"
faer = { version = "0.24", optional = true }
faer-traits = { version = "0.24", optional = true }
cblas-sys = { version = "0.2", optional = true }
blas-src = { version = "0.14", optional = true }
cblas-inject = { version = "0.1", optional = true }
num-complex = { version = "0.4", optional = true }

[features]
default = ["faer", "faer-traits"]
blas = ["dep:cblas-sys", "dep:blas-src", "dep:num-complex"]
blas-inject = ["dep:cblas-inject", "dep:num-complex"]

[dev-dependencies]
approx = "0.5"
num-complex = "0.4"
rand = "0.8"

[lib]
bench = false
