[package]
name = "strided-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Satoshi Terasaki", "Hiroshi Shinaoka"]
repository = "https://github.com/tensor4all/strided-rs"
description = "Cache-optimized kernels for strided multidimensional array operations in Rust (ported from Julia Strided.jl/StridedViews.jl)."
publish = false

[dependencies]
strided-view = { path = "../strided-view" }
num-traits = "0.2"
num-complex = "0.4"
rayon = { version = "1.10", optional = true }
smallvec = { version = "1", optional = true }
pulp = { version = "0.22", optional = true }

[features]
default = ["simd"]
parallel = ["rayon", "smallvec"]
simd = ["dep:pulp"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"
num-complex = "0.4"

[lib]
bench = false

[[bench]]
name = "rust_compare"
harness = false

[[bench]]
name = "scaling_compare"
harness = false

[[bench]]
name = "threaded_compare"
harness = false
required-features = ["parallel"]

[[bench]]
name = "rank25_permute"
harness = false
