[package]
name = "strided-opteinsum"
version = "0.1.0"
edition = "2021"

[dependencies]
strided-view = { path = "../strided-view" }
strided-kernel = { path = "../strided-kernel" }
strided-einsum2 = { path = "../strided-einsum2" }
omeco = "0.2"
num-complex = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
num-complex = "0.4"
rand = "0.8"
strided-view = { path = "../strided-view" }

[lib]
bench = false

[[bench]]
name = "manyinds"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "batchmul"
harness = false

[[bench]]
name = "dot"
harness = false

[[bench]]
name = "trace"
harness = false

[[bench]]
name = "ptrace"
harness = false

[[bench]]
name = "diag"
harness = false

[[bench]]
name = "perm"
harness = false

[[bench]]
name = "tcontract"
harness = false

[[bench]]
name = "star"
harness = false

[[bench]]
name = "starandcontract"
harness = false

[[bench]]
name = "indexsum"
harness = false

[[bench]]
name = "hadamard"
harness = false

[[bench]]
name = "outer"
harness = false
